Make sure progress bars don't overflow

--- a/assets/css/com/progress-bar.less
+++ b/assets/css/com/progress-bar.less
@@ -12,6 +12,7 @@
   &:extend(.rounded);
   position: relative;
   width: 400px;
+  max-width: 100%;
   height: 10px;
   border: 1px solid  @color-border--dark-gray;
   margin-bottom: 1rem;
